# nixstats

./: Cargo.toml
src/: main.rs
www/: index.css  index.html  index.js  ws.js
