[package]
name = "nixstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14.24", features = ["full", "client"] }
hyper-openssl = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
